cosmic-epoch/cosmic-sory-ia/sory-ia/sory-rs/tui/src/bottom_pane/snapshots/sory_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_events_with_issues.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
                                                                                                                
  Hooks                                                                                                         
  Lifecycle hooks from config and enabled plugins.                                                              
                                                                                                                
  Issues                                                                                                        
  ⚠ skipped invalid matcher for PreToolUse                                                                      
  ■ /tmp/hooks.json: failed to parse hooks config                                                               
                                                                                                                
  Event                 Installed   Active      Description                                                     
  PreToolUse            0           0           Before a tool executes                                          
  PermissionRequest     0           0           When permission is requested                                    
  PostToolUse           0           0           After a tool executes                                           
  PreCompact            0           0           Before context compaction                                       
  PostCompact           0           0           After context compaction                                        
  SessionStart          0           0           When a new session starts                                       
  UserPromptSubmit      0           0           When the user submits a prompt                                  
  Stop                  0           0           Right before sory ends its turn                                
                                                                                                                
  Press enter to view hooks; esc to close
